# UniPay-Project

./: .gitignore  .replit  DARKDAYS_POCKET_UI_VERIFICATION.md  MANUAL_UI_TESTING_GUIDE.md  QR_FEATURE_DELIVERABLES.md  QR_PAYMENT_IMPLEMENTATION_SUMMARY.md  TESTING_QR_PAYMENT.md  TOPUP_TRANSACTION_FLOW.md  app.py  package-lock.json  package.json  push_to_github.sh  pyproject.toml  replit.md  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
attached_assets/: Pasted-For-each-existing-account-generate-and-insert-realistic-historical-financial-activity-so-that-calen-1762644550705_1762644550706.txt  Pasted-Please-extend-the-Calendar-functionality-in-the-Activity-section-with-an-interactive-feature-for-man-1762648708278_1762648708279.txt  Pasted-Please-redesign-the-UniPay-frontend-to-have-a-clean-modern-and-interactive-layout-inspired-by-Revo-1762551657635_1762551657636.txt  Pasted-Project-Overview-UniPay-Smart-Student-Digital-Wallet-Goal-To-build-an-innovative-digital-wallet-1762542232307_1762542232307.txt  Pasted-Project-Overview-UniPay-Smart-Student-Digital-Wallet-Goal-To-build-an-innovative-digital-wallet-1762542280648_1762542280649.txt  Pasted-Project-name-UniPay-Student-Digital-Wallet-Build-a-full-stack-web-app-using-Flask-Python-backen-1762541784861_1762541784862.txt  Pasted-We-already-have-a-working-login-and-registration-system-Now-please-expand-the-project-by-adding-1762552302877_1762552302878.txt  Pasted-We-already-have-authentication-login-register-Now-let-s-build-the-visual-skeleton-and-comp-1762554509894_1762554509895.txt
backend/: .coverage  DATA_SYNCHRONIZATION_REPORT.md  cleanup_generated_transactions.py  config.py  generate_more_history.py  generate_transaction_history.py  generate_upcoming_payments.py  migrate_categories.py  pytest.ini  rebalance_income.py  run.py  seed_any_account.py  seed_extended_users.py  seed_merchants.py  seed_student_klomba_full.py  seed_users.py  set_default_pins.py  verify_sync.py
(+183 files in other folders)
